<resources>
    <string name="app_name">长颜草帮帮记</string>
    <string name="welcome">欢迎使用长颜草帮帮记账!</string>

    <string name="grid_payout_add">记录消费</string>
    <string name="grid_payout_manage">查询消费</string>
    <string name="grid_account_manage">账本管理</string>
    <string name="grid_statistics_manage">统计管理</string>
    <string name="grid_category_manage">类别管理</string>
    <string name="grid_user_manage">人员管理</string>

    <string name="hint_user_name">人员名称</string>

    <string name="title_add">新建</string>
    <string name="title_update">修改</string>
    <string name="title_user">人员管理%s</string>
    <string name="title_category">类别管理%s</string>
    <string name="title_category_add_or_update">%s类别</string>

    <string name="button_save">保存</string>
    <string name="button_cancel">取消</string>
    <string name="button_yes">是</string>
    <string name="button_no">否</string>
    <string name="dialog_title_user">%s人员</string>
    <string name="dialog_title_account_book">%s账本</string>
    <string name="dialog_title_delete">您确定要删除吗？</string>

    <string name="dialog_message_user_delete">您确定要删除%s用户吗？</string>
    <string name="check_text_chinese_english_num">%s必须是中文、英文与数字</string>

    <string name="check_text_user_exist">该用户已存在，请再次输入</string>
    <string name="check_text_account_book_exist">该账本已存在，请更换账本名称</string>
    <string name="tips_add_success">保存成功</string>
    <string name="tips_add_fail">保存失败</string>
    <string name="tips_delete_fail">删除失败</string>

    <string name="menu_text_update">修改</string>
    <string name="menu_text_delete">删除</string>
    <string name="hint_account_book_name">账本名称</string>
    <string name="check_box_text_is_default">设置为默认账本</string>
    <string name="title_accountBook">账本管理(%s)</string>
    <string name="textview_text_childern_category">%s子类</string>
    <string name="catetory_total">统计类别</string>
    <string name="tx_category_name">类别名称</string>
    <string name="tx_category_parentId">所属分类</string>
    <string name="spinner_choose">-请选择-</string>
    <string name="dialog_message_category_delete">您确定要删除%s类别吗？</string>
    <string name="account_dialog_show_massage_false">请勾选默认账本</string>
    <string name="button_text_select_account_book">选择账本</string>
    <string name="button_text_enter_amount">输入金额</string>
    <string name="hint_enter_amount">请输入金额</string>
    <string name="button_text_select_category">选择类别</string>
    <string name="hint_enter_category">请输入或选择消费类别</string>
    <string name="button_text_select_date">选择日期</string>
    <string name="button_text_select_type">计算方式</string>
    <string name="button_text_select_user">选择消费人</string>
    <string name="hint_select_user">请选择消费人，第一位为付款人</string>
    <string name="hint_enter_comment">请输入消费心得或备注</string>
    <string name="title_payout_add_or_update">%s消费</string>
    <string name="check_text_money">金额必须是数字，并且不能超过小数点后两位</string>
    <string name="check_text_category_is_null">请选择一个消费类别</string>
    <string name="check_text_date_is_after">请选择一个正确的日期</string>
    <string name="check_text_payout_user_is_null">请选择一个消费人</string>
    <string name="check_text_payout_user">均分或借贷，请至少选择两个消费人</string>
    <string name="check_text_payout_user2">个人消费，请至少选择一个消费人</string>
    <string name="button_text_back">返回</string>
    <string name="textview_text_payout_amount">消费金额：%s元</string>
    <string name="dialog_message_accountBook_delete">%s账本删除后相关消费记录也确定要删除吗？</string>
    <string name="tips_delete_fail_account">删除失败，必须有默认账本</string>
    <string name="title_statistics">统计管理-%s</string>
    <string name="dialog_title_statistics">统计</string>
    <string name="statistics_waiting_progress">正在统计中，请稍后...</string>
    <string name="export_data_fail">导出失败</string>
    <string name="payout_category_statistics">消费统计类别</string>
    <string name="dialog_backup_success">数据备份成功</string>
    <string name="dialog_backup_fail">数据备份失败</string>
    <string name="dialog_restore_success">数据还原成功</string>
    <string name="dialog_restore_fail">数据还原失败</string>
    <string name="tips_delete_success">删除成功</string>
</resources>
